--- a/voodoo-boy/.classpath
+++ b/voodoo-boy/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dustin/Desktop/game-off-2013/voodoo-boy/libs/artemis.jar" sourcepath="libs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
